--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-boundaries": "^2.4.2",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.2",
     "jest": "^27.0.6",
