--- a/environments/.env
+++ b/environments/.env
@@ -8,6 +8,6 @@ TYPEORM_PORT=3306
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=true
 TYPEORM_ENTITIES='dist/**/*.entity.js'
-TYPEORM_MIGRATIONS='dist/migrations/*.js'
+TYPEORM_MIGRATIONS='dist/**/migrations/*.js'
 TYPEORM_MIGRATIONS_DIR='src/migrations'
 TYPEORM_MIGRATIONS_RUN=true
